--- a/index.html
+++ b/index.html
@@ -4,8 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>teste</h1>
+    <main style="text-align: center;">
+        <h1>formulário</h1>
+        <hr>
+        <br>
+        <!-- <form action="">
+            <div>
+                <label for="texto">Nome:</label>
+                <input type="text" id="texto" name="nome">
+            </div>
+            <br>
+            <div>
+                <label for="senha">Senha:</label>
+                <input type="password" name="senha" id="senha">
+            </div>
+            <br>
+            <div>
+                <label for="email">Email:</label>
+                <input type="email" name="email" id="email">
+            </div>
+            <br>
+            <div>
+                <label for="data">Data de Nascimento:</label>
+                <input type="date" name="date" id="data">
+            </div>
+            <br>
+            <div>
+                <label for="hora">Horário:</label>
+                <input type="time" name="time" id="hora">
+            </div>
+            <br>
+            <textarea name="bio" id="bio" cols="30" rows="10"></textarea>
+            <div>
+                <select name="select" id="select">
+                    <option value="" disabled selected>Selecione uma opção...</option>
+                    <option value="receita">Receita</option>
+                    <option value="despesa">Despesa</option>
+                    <option value="transferencia">Transferência</option>
+                    </select>
+                    </div>
+                <br>
+                <br>
+            <div>
+            <!-- <label for="input">input:</label> -->
+                <!-- <input type="submit" name="input" id="input" >
+            </div>
+        </form>  -->
+        <div class="boxes">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+            <div class="box">6</div>
+            <div class="box">7</div>
+            <div class="box">8</div>
+            <div class="box">9</div>
+        </div>
+    </main>
 </body>
 </html>
